# practice-kotlin

./: .gitignore  README.md  db.sqlite3  pyproject.toml
server_django/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
server_django/addresses/: models.py  serializer.py  views.py
server_django/addresses/migrations/: 0001_initial.py
server_django/server_django/: settings.py  urls.py
server_django/templates/addresses/: login.html
